log
Fri 10 May 2024 02:45:12 AM UTC: 
 hashmap.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
3589b07
Fri 10 May 2024 02:50:40 AM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
e9e98fb
Fri 10 May 2024 02:53:42 AM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d3e6678
Fri 10 May 2024 02:53:57 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4f4ee49
Fri 10 May 2024 02:54:31 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
ad09e7a
Fri 10 May 2024 02:58:02 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
ec24bf8
Fri 10 May 2024 03:03:02 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
a9034cc
Fri 10 May 2024 03:04:47 AM UTC: 
 hashmap.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccP9rDZS.o: in function `next_test':
test.c:(.text+0x1263): undefined reference to `nextMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x12c8): undefined reference to `nextMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x130c): undefined reference to `nextMap'
collect2: error: ld returned 1 exit status
Compilation failed
e04d2dc
Fri 10 May 2024 03:05:16 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  13|2
total_score: 50/70
d2c736f
Fri 10 May 2024 03:06:16 AM UTC: 
 hashmap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  12|2
total_score: 50/70
50268c2
Fri 10 May 2024 03:07:39 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:111:36: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘value’
  111 |             return map->buckets[map->value];
      |                                    ^~
Compilation failed
fd7e1b4
Fri 10 May 2024 03:08:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
e53b2a9
Fri 10 May 2024 03:10:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:111:46: error: returning ‘char *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  111 |             return map->buckets[map->current]->key;
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
d0b8410
Fri 10 May 2024 03:11:45 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:111:46: error: returning ‘char *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  111 |             return map->buckets[map->current]->key;
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
1090e09
Fri 10 May 2024 03:14:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
1322545
Fri 10 May 2024 03:18:57 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
a0abb2f
Fri 10 May 2024 03:25:31 AM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
hashmap.c:81:1: error: expected identifier or ‘(’ before ‘}’ token
   81 | }
      | ^
Compilation failed
d7e88a0
Fri 10 May 2024 03:25:44 AM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|0
ba87fab
Fri 10 May 2024 03:27:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:67:29: error: too many arguments to function ‘malloc’
   67 |     map->buckets = (Pair **)malloc(map->capacity, sizeof(Pair *));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
340bde6
Fri 10 May 2024 03:28:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7e32c37
Fri 10 May 2024 03:28:39 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
49a991a
